Add new projects, add home page e styles

--- a/HTML e CSS/Curse/class 01/about-me/index.html
+++ b/HTML e CSS/Curse/class 01/about-me/index.html
@@ -19,6 +19,10 @@
 
 <body>
   <main class="container">
+    <a href="../../index.html" class="backLink">
+      Voltar
+    </a>
+    
     <div class="content">
       <aside class="aside_container">
         <img src="https://github.com/luisfcodes.png" alt="Avatar do github" class="profile_avatar">
