--- a/HTML e CSS/Curse/class 06/index.html
+++ b/HTML e CSS/Curse/class 06/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
     <title>Aula 05</title>
 </head>
@@ -11,7 +12,7 @@
     <div class="container">
         <div class="profile">
             <h1>Foto de Perfil</h1>
-            <img src="perfil.jpeg" alt="Foto de perfil">
+            <img src="./images/perfil.jpeg" alt="Foto de perfil">
         </div>
         <div class="belgium">
             <h1>Bélgica</h1>
