Add back link in all pages

--- a/HTML e CSS/Curse/class 03/index.html
+++ b/HTML e CSS/Curse/class 03/index.html
@@ -17,6 +17,12 @@
 <body>
   <main>
     <div class="container">
+      <div class="backLink_container">
+        <a href="../index.html" class="backLink">
+          Voltar
+        </a>
+      </div>
+
       <h1>Faça a reserva do seu <span>quarto ideal</span>.</h1>
       <form class="form_container">
         <label for="name">Nome Completo</label>
