--- a/HTML e CSS/Curse/index.html
+++ b/HTML e CSS/Curse/index.html
@@ -85,7 +85,7 @@
       </div>
 
       <div class="card_container">
-        <a href="./class 07/exercicio7.html">
+        <a href="./class 07/index.html">
           <img class="card_banner" src="./class 07/images/flexbox_grid.jpg" alt="Foto com conceito de animação de um pincel e alguns livros">
           <div class="card_content">
             <h3>Projeto Aula 07</h3>
