--- a/HTML e CSS/Curse/class 01/about-me/index.html
+++ b/HTML e CSS/Curse/class 01/about-me/index.html
@@ -10,7 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="./images/favicon.png" type="image/png">
   <link rel="stylesheet" href="./styles/global.css">
-  <link rel="stylesheet" href="./styles/index.css">
+  <link rel="stylesheet" href="./styles/styles.css">
 
   <script src="./components/profile.js" defer></script>
 
