--- a/HTML e CSS/Curse/class 02/table-challenge/index.html
+++ b/HTML e CSS/Curse/class 02/table-challenge/index.html
@@ -11,114 +11,119 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="./styles/global.css">
-  <link rel="stylesheet" href="./styles/table.css">
+  <link rel="stylesheet" href="./styles/styles.css">
 
   <title>Table - Challenge</title>
 </head>
 
 <body>
   <main>
-    <table rules="all" summary="A tabela demonstra um cronograma diário de atividades a serem realizadas.">
-      <caption>Tabela 1: Cronograma diário de atividades</caption>
-      <thead>
-        <tr>
-          <th></th>
-          <th>Monday</th>
-          <th>Tuesday</th>
-          <th>Wednesday</th>
-          <th>Thursday</th>
-          <th>Friday</th>
-        </tr>
-      </thead>
+    <div class="container">
+      <a href="../../index.html" class="backLink">
+        Voltar
+      </a>
+      <table rules="all" summary="A tabela demonstra um cronograma diário de atividades a serem realizadas.">
+        <caption>Tabela 1: Cronograma diário de atividades</caption>
+        <thead>
+          <tr>
+            <th></th>
+            <th>Monday</th>
+            <th>Tuesday</th>
+            <th>Wednesday</th>
+            <th>Thursday</th>
+            <th>Friday</th>
+          </tr>
+        </thead>
 
-      <tbody>
-        <tr>         
-          <td>8:00am</td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td rowspan="13">No Classes</td>
-        </tr>
-        <tr>
-          <td>9:00am</td>
-          <td rowspan="2">Office Hours</td>
-          <td></td>
-          <td rowspan="2">Office Hours</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td>10:00am</td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td>11:00am</td>
-          <td rowspan="2">CS245A</td>
-          <td rowspan="2">CS301A</td>
-          <td rowspan="2">CS245A</td>
-          <td rowspan="2">CS301A</td>
-        </tr>
-        <tr>
-          <td>12:00pm</td>
-        </tr>
-        <tr>
-          <td>1:00pm</td>
-          <td colspan="4" style="text-align: start;">Lunch</td>
-        </tr>
-        <tr>
-          <td>2:00pm</td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td>3:00pm</td>
-          <td>Office Hours</td>
-          <td>Office Hours</td>
-          <td></td>
-          <td>Office Hours</td>
-        </tr>
-        <tr>
-          <td>4:00pm</td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td>5:30pm</td>
-          <td rowspan="3">CS505A</td>
-          <td rowspan="3">CS556AH1</td>
-          <td rowspan="3">CS556BH2</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td>6:30pm</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td>7:30pm</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td>8:00pm</td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td colspan="5" style="text-align: start;">CS556AH1 is a first term course</td>
-        </tr>
-        <tr>
-          <td></td>
-          <td colspan="5" style="text-align: start;">CS556BH2 is a second term course</td>
-        </tr>
-      </tbody>
-    </table>
+        <tbody>
+          <tr>
+            <td>8:00am</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td rowspan="13">No Classes</td>
+          </tr>
+          <tr>
+            <td>9:00am</td>
+            <td rowspan="2">Office Hours</td>
+            <td></td>
+            <td rowspan="2">Office Hours</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>10:00am</td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>11:00am</td>
+            <td rowspan="2">CS245A</td>
+            <td rowspan="2">CS301A</td>
+            <td rowspan="2">CS245A</td>
+            <td rowspan="2">CS301A</td>
+          </tr>
+          <tr>
+            <td>12:00pm</td>
+          </tr>
+          <tr>
+            <td>1:00pm</td>
+            <td colspan="4" style="text-align: start;">Lunch</td>
+          </tr>
+          <tr>
+            <td>2:00pm</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>3:00pm</td>
+            <td>Office Hours</td>
+            <td>Office Hours</td>
+            <td></td>
+            <td>Office Hours</td>
+          </tr>
+          <tr>
+            <td>4:00pm</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>5:30pm</td>
+            <td rowspan="3">CS505A</td>
+            <td rowspan="3">CS556AH1</td>
+            <td rowspan="3">CS556BH2</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>6:30pm</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>7:30pm</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>8:00pm</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td colspan="5" style="text-align: start;">CS556AH1 is a first term course</td>
+          </tr>
+          <tr>
+            <td></td>
+            <td colspan="5" style="text-align: start;">CS556BH2 is a second term course</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </main>
 </body>
 
