--- a/HTML e CSS/Curse/class 04/index.html
+++ b/HTML e CSS/Curse/class 04/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/favicon.png" type="image/png">
     <title>Challenge - CSS</title>
-    <link rel="stylesheet" href="challengeCSS.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <main>
         <div class="container">
+            <a href="../index.html" class="backLink">
+                Voltar
+            </a>
+
             <h1 class="title-h1">Hello World</h1>
 
             <h2 class="title-h2">My first h2</h2>
@@ -26,10 +32,31 @@
             <button class="content-buttons">Click Me!</button>
             <button class="content-buttons">Click Me!</button>
 
-            <p class="content-paragraph" >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis vel provident fugiat nisi nostrum quae nihil ducimus animi odio aut saepe unde consequatur et delectus doloremque impedit rem, tempore voluptatem? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam quas autem molestiae magni explicabo rerum harum, nulla obcaecati voluptatem reiciendis deleniti illum, doloremque atque cum? Molestias inventore incidunt quae. Nihil. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio dolores recusandae quis, ad temporibus sapiente dolore explicabo minus voluptatem deleniti aspernatur illum iure minima nemo corrupti quasi illo repellat exercitationem.</p>
-            <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum veniam eaque voluptate quod libero inventore. Illum vero fugiat ex deleniti placeat hic autem, dolorem magnam. Temporibus blanditiis soluta unde earum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores iusto quisquam ipsam consequatur atque praesentium nulla, deleniti molestias voluptatem sit ipsa debitis ab voluptate alias quod commodi sapiente mollitia ad? Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem iste sit doloremque maiores sed, dolorem quibusdam commodi autem repellat quasi laborum recusandae facere asperiores veritatis debitis voluptas quos repellendus quaerat?</p>
-            <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam similique ducimus tenetur rerum, natus aut optio sapiente odit totam debitis nihil iusto, esse hic iure! Id corporis ex error distinctio! Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel tenetur atque alias, quo nemo repudiandae consequatur eaque corporis sapiente? A ex aperiam assumenda repellendus itaque enim porro perspiciatis ducimus eius. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae unde aliquid amet tempora. Aspernatur, porro eos quibusdam quia suscipit similique! Sed perspiciatis explicabo, quibusdam ipsam a cumque saepe tempore dolorem!</p>
+            <p class="content-paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis vel
+                provident fugiat nisi nostrum quae nihil ducimus animi odio aut saepe unde consequatur et delectus
+                doloremque impedit rem, tempore voluptatem? Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Aliquam quas autem molestiae magni explicabo rerum harum, nulla obcaecati voluptatem reiciendis deleniti
+                illum, doloremque atque cum? Molestias inventore incidunt quae. Nihil. Lorem ipsum dolor sit amet
+                consectetur, adipisicing elit. Distinctio dolores recusandae quis, ad temporibus sapiente dolore
+                explicabo minus voluptatem deleniti aspernatur illum iure minima nemo corrupti quasi illo repellat
+                exercitationem.</p>
+            <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum veniam eaque
+                voluptate quod libero inventore. Illum vero fugiat ex deleniti placeat hic autem, dolorem magnam.
+                Temporibus blanditiis soluta unde earum. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Dolores iusto quisquam ipsam consequatur atque praesentium nulla, deleniti molestias voluptatem sit ipsa
+                debitis ab voluptate alias quod commodi sapiente mollitia ad? Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Exercitationem iste sit doloremque maiores sed, dolorem quibusdam commodi autem
+                repellat quasi laborum recusandae facere asperiores veritatis debitis voluptas quos repellendus quaerat?
+            </p>
+            <p class="content-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam similique
+                ducimus tenetur rerum, natus aut optio sapiente odit totam debitis nihil iusto, esse hic iure! Id
+                corporis ex error distinctio! Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel tenetur atque
+                alias, quo nemo repudiandae consequatur eaque corporis sapiente? A ex aperiam assumenda repellendus
+                itaque enim porro perspiciatis ducimus eius. Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Quae unde aliquid amet tempora. Aspernatur, porro eos quibusdam quia suscipit similique! Sed
+                perspiciatis explicabo, quibusdam ipsam a cumque saepe tempore dolorem!</p>
         </div>
     </main>
 </body>
+
 </html>
