--- a/HTML e CSS/Curse/class 06/index.html
+++ b/HTML e CSS/Curse/class 06/index.html
@@ -1,43 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./images/favicon.png" type="image/png">
-    <link rel="stylesheet" href="styles.css">
-    <title>Aula 05</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="./images/favicon.png" type="image/png">
+  <link rel="stylesheet" href="styles.css">
+  <title>Aula 05</title>
 </head>
+
 <body>
-    <div class="container">
-        <div class="profile">
-            <h1>Foto de Perfil</h1>
-            <img src="./images/perfil.jpeg" alt="Foto de perfil">
-        </div>
-        <div class="belgium">
-            <h1>Bélgica</h1>
-            <div>
-                <div class="black"></div>
-                <div class="yellow"></div>
-                <div class="red"></div>
-            </div>
-        </div>
-        <div class="germany">
-            <h1>Alemanha</h1>
-            <div>
-                <div class="black"></div>
-                <div class="red"></div>
-                <div class="yellow"></div>
-            </div>
-        </div>
-        <div class="france">
-            <h1>França</h1>
-            <div>
-                <div class="blue"></div>
-                <div class="white"></div>
-                <div class="red"></div>
-            </div>
-        </div>
+  <div class="container">
+    <div>
+      <a href="../index.html" class="backLink">
+        Voltar
+      </a>
     </div>
+
+    <div class="content">
+      <div class="profile">
+        <h1>Foto de Perfil</h1>
+        <img src="./images/perfil.jpeg" alt="Foto de perfil">
+      </div>
+      <div class="belgium">
+        <h1>Bélgica</h1>
+        <div>
+          <div class="black"></div>
+          <div class="yellow"></div>
+          <div class="red"></div>
+        </div>
+      </div>
+      <div class="germany">
+        <h1>Alemanha</h1>
+        <div>
+          <div class="black"></div>
+          <div class="red"></div>
+          <div class="yellow"></div>
+        </div>
+      </div>
+      <div class="france">
+        <h1>França</h1>
+        <div>
+          <div class="blue"></div>
+          <div class="white"></div>
+          <div class="red"></div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
+
 </html>
