Add link to repository

--- a/HTML e CSS/Curse/index.html
+++ b/HTML e CSS/Curse/index.html
@@ -15,7 +15,12 @@
 
 <body>
   <main class="container_main">
-    <h1 class="title_main">Projetos desenvolvidos em <span>sala de aula</span>.</h1>
+    <div>
+      <h1 class="title_main">Projetos desenvolvidos em <span>sala de aula</span>.</h1>
+      <h4 class="title_repo">Repositório: 
+        <a href="https://github.com/luisfcodes/pucpr-paft" target="_blank">github.com/luisfcodes/pucpr-paft</a>
+      </h4>
+    </div>
 
     <section class="content_main">
       <div class="card_container">
