Booking page creation, changing primary and secondary colors and adding styles

--- a/HTML e CSS/Curse/hotel job/src/pages/Payment/index.html
+++ b/HTML e CSS/Curse/hotel job/src/pages/Payment/index.html
@@ -17,7 +17,7 @@
     <header>
         <div class="header_container">
           <div class="header_logo">
-            <a href="/src/pages/Home">
+            <a href="../Home/">
               <img src="../../assets/logo.png" alt="Imagem da frente de um hotel">
     
               <div>
