--- a/HTML e CSS/Curse/hotel job/src/pages/Home/index.html
+++ b/HTML e CSS/Curse/hotel job/src/pages/Home/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="../../styles/global.css">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <script src="../../js/index.js" defer></script>
   <title>LFS Hotel | Home</title>
 </head>
 
@@ -18,7 +19,7 @@
   <header>
     <div class="header_container">
       <div class="header_logo">
-        <a href="/src/pages/Home">
+        <a href="./">
           <img src="../../assets/logo.png" alt="Imagem da frente de um hotel">
 
           <div>
@@ -51,7 +52,7 @@
             </a>
           </li>
           <li>
-            <button>Login</button>
+            <button id="buttonSignUp">Login</button>
           </li>
         </ul>
       </nav>
@@ -60,13 +61,12 @@
 
   <main>
     <div class="main_container">
-      <h1>Elegância e <span>Conforto</span> em só lugar<span>.</span></h1>
+      <h1>Elegância e <span>Conforto</span> em um só lugar<span>.</span></h1>
+      <p>Conosco sua única preocupação será em como aproveitar as férias da melhor maneira.</p>
 
       <section>
-        <img src="../../assets/banner.jpg" alt="">
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error debitis officia laudantium saepe? Labore,
-          veniam. Quae vel fuga mollitia recusandae exercitationem praesentium dolorum quisquam sunt necessitatibus,
-          dolore voluptas ipsum excepturi?</p>
+        <img src="../../assets/banner.jpg" alt="Foto de uma fachada de hotel a noite, com piscina e cadeiras de praia.">
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit rerum quis aut quibusdam, facilis ipsam iste labore quaerat provident ducimus at. Quod natus dolore a ipsum ab hic voluptatum placeat.</p>
       </section>
     </div>
   </main>
