--- a/HTML e CSS/Curse/hotel job/src/pages/Reservation/index.html
+++ b/HTML e CSS/Curse/hotel job/src/pages/Reservation/index.html
@@ -2,89 +2,168 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../../assets/hotel.png" type="image/png">
-    <link rel="stylesheet" href="../../styles/global.css">
-    <link rel="stylesheet" href="./styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <title>LFS Hotel | Reserva</title>
+  <meta charset="UTF-8">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="../../assets/hotel.png" type="image/png">
+  <link rel="stylesheet" href="../../styles/global.css">
+  <link rel="stylesheet" href="./styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <title>LFS Hotel | Reserva</title>
 </head>
 
 <body>
-    <header>
-        <div class="header_container">
-            <div class="header_logo">
-                <a href="/src/pages/Home">
-                    <img src="../../assets/logo.png" alt="Imagem da frente de um hotel">
+  <header>
+    <div class="header_container">
+      <div class="header_logo">
+        <a href="../Home">
+          <img src="../../assets/logo.png" alt="Imagem da frente de um hotel">
 
-                    <div>
-                        <span>LFS</span>
-                        <span>HOTEL</span>
-                    </div>
-                </a>
+          <div>
+            <span>LFS</span>
+            <span>HOTEL</span>
+          </div>
+        </a>
+      </div>
+
+      <nav>
+        <ul>
+          <li>
+            <a href="../Home">
+              Home
+            </a>
+          </li>
+          <li>
+            <a href="../Reservation/">
+              Reserva
+            </a>
+          </li>
+          <li>
+            <a href="../Registration/">
+              Cadastro
+            </a>
+          </li>
+          <li>
+            <a href="../Payment/">
+              Pagamento
+            </a>
+          </li>
+          <li>
+            <button>Login</button>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <div class="main_container">
+      <h1>Encontre a opção ideal para o seu <span>descanso</span>.</h1>
+
+      <button class="reserve_button">Reservar</button>
+
+      <section>
+
+        <div class="main_card">
+          <img class="card_banner" src="../../assets/singleRoom.jpg" alt="Foto de um quarto elegante com uma cama de solteiro, com um abajur ao lado">
+          <div class="card_content">
+            <h3>Solteiro</h3>
+            <p>Indicado para quem está viajando sozinho, apesar de compacto oferece um super conforto.</p>
+            <div class="card_options">
+              <div class="card_option">
+                <img src="../../assets/bed.png" alt="Ícone de uma cama" class="card_option_icon">
+                <span>01 cama de solteiro</span>
+              </div>
+              <div class="card_option">
+                <img src="../../assets/airConditioning.png" alt="Ícone de um ar condicionado" class="card_option_icon">
+                <span>Ar condicionado</span>
+              </div>
             </div>
-
-            <nav>
-                <ul>
-                    <li>
-                        <a href="../Home">
-                            Home
-                        </a>
-                    </li>
-                    <li>
-                        <a href="../Reservation/">
-                            Reserva
-                        </a>
-                    </li>
-                    <li>
-                        <a href="../Registration/">
-                            Cadastro
-                        </a>
-                    </li>
-                    <li>
-                        <a href="../Payment/">
-                            Pagamento
-                        </a>
-                    </li>
-                    <li>
-                        <button>Login</button>
-                    </li>
-                </ul>
-            </nav>
+          </div>
         </div>
-    </header>
 
-    <main>
-        <div class="main_container">
-            <section>
-                <div class="main_card">
-                    <img src="../../assets/banner.jpg" alt="">
-                    <h3>Suítes Básicas</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae molestiae neque tenetur quam quod iusto eaque, voluptatibus perferendis, hic reprehenderit ipsam mollitia accusantium temporibus quisquam! Provident aliquam accusantium fugiat sed!</p>
-                </div>
-
-                <div class="main_card">
-                    <img src="../../assets/banner.jpg" alt="">
-                    <h3>Suítes Básicas</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi veritatis delectus vero necessitatibus maiores vel! Veniam nulla suscipit reprehenderit, praesentium exercitationem rerum quam repellat voluptatem laudantium ad aspernatur? Praesentium, corporis.</p>
-                </div>
-
-                <div class="main_card">
-                    <img src="../../assets/banner.jpg" alt="">
-                    <h3>Suítes Básicas</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad magnam nostrum dignissimos cum minus inventore hic vero, ex perferendis aliquid similique odit facilis blanditiis quod nihil numquam sint porro ullam.</p>
-                </div>
-            </section>
+        <div class="main_card">
+          <img class="card_banner" src="../../assets/doubleBedroom.jpg" alt="">
+          <div class="card_content">
+            <h3>Casal</h3>
+            <p>Ideal para casais que buscam conforto, sem abrir mão da elegância.</p>
+            <div class="card_options">
+              <div class="card_option">
+                <img src="../../assets/bed.png" alt="Ícone de uma cama" class="card_option_icon">
+                <span>01 cama de casal</span>
+              </div>
+              <div class="card_option">
+                <img src="../../assets/airConditioning.png" alt="Ícone de um ar condicionado" class="card_option_icon">
+                <span>Ar condicionado</span>
+              </div>
+              <div class="card_option">
+                <img src="../../assets/fridge.png" alt="Ícone de um frigobar" class="card_option_icon">
+                <span>Frigobar</span>
+              </div>
+            </div>
+          </div>
         </div>
-    </main>
 
-    <footer>
-        <span>Copyright © 2022-2022 LFS HOTEL - Todos os direitos reservados</span>
-    </footer>
+        <div class="main_card">
+          <img class="card_banner" src="../../assets/familyRoom.jpg" alt="">
+          <div class="card_content">
+            <h3>Família</h3>
+            <p>Este quarto oferece tudo que sua família precisa para ter uma experiência incrível.</p>
+            <div class="card_options">
+              <div class="card_option">
+                <img src="../../assets/bed.png" alt="Ícone de uma cama" class="card_option_icon">
+                <span>01 cama de casal</span>
+              </div>
+              <div class="card_option">
+                <img src="../../assets/bed.png" alt="Ícone de uma cama" class="card_option_icon">
+                <span>02 camas de solteiro</span>
+              </div>
+              <div class="card_option">
+                <img src="../../assets/airConditioning.png" alt="Ícone de um ar condicionado" class="card_option_icon">
+                <span>Ar condicionado</span>
+              </div>
+              <div class="card_option">
+                <img src="../../assets/fridge.png" alt="" class="card_option_icon">
+                <span>Frigobar</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="main_card">
+          <img class="card_banner" src="../../assets/presidentialSuite.jpg" alt="">
+          <div class="card_content">
+            <h3>Presidencial</h3>
+            <p>Tenha uma das vistas mais bonitas da cidade, além de uma piscina aquecida.</p>
+            <div class="card_options">
+              <div class="card_option">
+                <img src="../../assets/bed.png" alt="Ícone de uma cama" class="card_option_icon">
+                <span>01 cama de casal</span>
+              </div>
+              <div class="card_option">
+                <img src="../../assets/airConditioning.png" alt="Ícone de um ar condicionado" class="card_option_icon">
+                <span>Ar condicionado</span>
+              </div>
+              <div class="card_option">
+                <img src="../../assets/fridge.png" alt="Ícone de um frigobar" class="card_option_icon">
+                <span>Frigobar</span>
+              </div>
+              <div class="card_option">
+                <img src="../../assets/pool.png" alt="Ícone de uma piscina" class="card_option_icon">
+                <span>Piscina aquecida</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+  </main>
+
+  <footer>
+    <span>Copyright © 2022-2022 LFS HOTEL - Todos os direitos reservados</span>
+  </footer>
 </body>
 
 </html>
