Add new pages, new styles and add tailwind with CDN

--- a/HTML e CSS/Curse/hotel job/src/pages/Home/index.html
+++ b/HTML e CSS/Curse/hotel job/src/pages/Home/index.html
@@ -52,7 +52,9 @@
             </a>
           </li>
           <li>
-            <button id="buttonSignUp">Login</button>
+            <a href="../SignUp/">
+              <button id="buttonSignUp">Login</button>
+            </a>
           </li>
         </ul>
       </nav>
@@ -62,11 +64,10 @@
   <main>
     <div class="main_container">
       <h1>Elegância e <span>Conforto</span> em um só lugar<span>.</span></h1>
-      <p>Conosco sua única preocupação será em como aproveitar as férias da melhor maneira.</p>
+      <p class="home_subtitle">Conosco sua única preocupação será em como aproveitar as férias da melhor maneira.</p>
 
       <section>
         <img src="../../assets/banner.jpg" alt="Foto de uma fachada de hotel a noite, com piscina e cadeiras de praia.">
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit rerum quis aut quibusdam, facilis ipsam iste labore quaerat provident ducimus at. Quod natus dolore a ipsum ab hic voluptatum placeat.</p>
       </section>
     </div>
   </main>
