--- a/HTML e CSS/Curse/hotel job/src/pages/Reservation/index.html
+++ b/HTML e CSS/Curse/hotel job/src/pages/Reservation/index.html
@@ -51,7 +51,9 @@
             </a>
           </li>
           <li>
-            <button>Login</button>
+            <a href="../SignUp/">
+              <button id="buttonSignUp">Login</button>
+            </a>
           </li>
         </ul>
       </nav>
@@ -62,7 +64,9 @@
     <div class="main_container">
       <h1>Encontre a opção ideal para o seu <span>descanso</span>.</h1>
 
-      <button class="reserve_button">Reservar</button>
+      <a href="./ReservationRoom/" class="reserve_button">
+        <button>Reservar</button>
+      </a>
 
       <section>
 
