--- a/HTML e CSS/Curse/hotel job/src/pages/Registration/index.html
+++ b/HTML e CSS/Curse/hotel job/src/pages/Registration/index.html
@@ -2,68 +2,95 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../../assets/hotel.png" type="image/png">
-    <link rel="stylesheet" href="../../styles/global.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <title>LFS Hotel | Cadastro</title>
+  <meta charset="UTF-8">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="../../assets/hotel.png" type="image/png">
+  <link rel="stylesheet" href="../../styles/global.css">
+  <link rel="stylesheet" href="./styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <title>LFS Hotel | Cadastro</title>
 </head>
 
 <body>
-    <header>
-        <div class="header_container">
-          <div class="header_logo">
-            <a href="../Home/">
-              <img src="../../assets/logo.png" alt="Imagem da frente de um hotel">
-    
-              <div>
-                <span>LFS</span>
-                <span>HOTEL</span>
-              </div>
-            </a>
+  <header>
+    <div class="header_container">
+      <div class="header_logo">
+        <a href="../Home/">
+          <img src="../../assets/logo.png" alt="Imagem da frente de um hotel">
+
+          <div>
+            <span>LFS</span>
+            <span>HOTEL</span>
           </div>
-    
-          <nav>
-            <ul>
-              <li>
-                <a href="../Home">
-                  Home
-                </a>
-              </li>
-              <li>
-                <a href="../Reservation/">
-                  Reserva
-                </a>
-              </li>
-              <li>
-                <a href="../Registration/">
-                  Cadastro
-                </a>
-              </li>
-              <li>
-                <a href="../Payment/">
-                  Pagamento
-                </a>
-              </li>
-              <li>
-                <button>Login</button>
-              </li>
-            </ul>
-          </nav>
-        </div>
-      </header>
+        </a>
+      </div>
 
-      <main>
-        <h1>Main</h1>
-      </main>
+      <nav>
+        <ul>
+          <li>
+            <a href="../Home">
+              Home
+            </a>
+          </li>
+          <li>
+            <a href="../Reservation/">
+              Reserva
+            </a>
+          </li>
+          <li>
+            <a href="../Registration/">
+              Cadastro
+            </a>
+          </li>
+          <li>
+            <a href="../Payment/">
+              Pagamento
+            </a>
+          </li>
+          <li>
+            <a href="../SignUp/">
+              <button id="buttonSignUp">Login</button>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-      <footer>
-        <span>Copyright © 2022-2022 LFS HOTEL - Todos os direitos reservados</span>
-      </footer>
+  <main>
+    <div class="container">
+      <div class="row col-3">
+        <form class="form_container">
+          <div class="form_inputs">
+            <label for="name">Nome</label>
+            <input type="text" id="name" required placeholder="Insira seu nome completo">
+          </div>
+          <div class="form_inputs">
+            <label for="email">E-mail</label>
+            <input type="email" id="email" required placeholder="Insira seu e-mail">
+          </div>
+          <div class="form_inputs_group">
+            <div class="form_inputs">
+              <label for="password">Senha</label>
+              <input type="password" id="password" required placeholder="Insira uma senha">
+            </div>
+            <div class="form_inputs">
+              <label for="validatePassword">Confirmar senha</label>
+              <input type="password" id="validatePassword" required placeholder="Confirme sua senha">
+            </div>
+          </div>
+          <button class="form_button">Cadastrar</button>
+        </form>
+      </div>
+    </div>
+  </main>
+
+  <footer>
+    <span>Copyright © 2022-2022 LFS HOTEL - Todos os direitos reservados</span>
+  </footer>
 </body>
 
 </html>
