--- a/HTML e CSS/Curse/hotel job/src/pages/SignUp/index.html
+++ b/HTML e CSS/Curse/hotel job/src/pages/SignUp/index.html
@@ -29,8 +29,12 @@
         </a>
       </div>
 
-      <nav>
-        <ul>
+      <nav id="header-nav" class="header-nav">
+        <button id="btn-mobile" class="header_btn_mobile">
+          <span class="hamburguer"></span>
+        </button>
+
+        <ul class="header_menu">
           <li>
             <a href="../Home">
               Home
