--- a/HTML e CSS/Curse/hotel job/src/pages/Registration/index.html
+++ b/HTML e CSS/Curse/hotel job/src/pages/Registration/index.html
@@ -11,25 +11,30 @@
   <link rel="stylesheet" href="../../styles/global.css">
   <link rel="stylesheet" href="./styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <script src="../../js/index.js" defer></script>
   <title>LFS Hotel | Cadastro</title>
 </head>
 
 <body>
-  <header>
-    <div class="header_container">
-      <div class="header_logo">
-        <a href="../Home/">
-          <img src="../../assets/logo.png" alt="Imagem da frente de um hotel">
-
-          <div>
-            <span>LFS</span>
-            <span>HOTEL</span>
-          </div>
-        </a>
-      </div>
-
-      <nav>
-        <ul>
+    <header>
+      <div class="header_container">
+        <div class="header_logo">
+          <a href="../Home/">
+            <img src="../../assets/logo.png" alt="Imagem da frente de um hotel">
+  
+            <div>
+              <span>LFS</span>
+              <span>HOTEL</span>
+            </div>
+          </a>
+        </div>
+  
+        <nav id="header-nav" class="header-nav">
+          <button id="btn-mobile" class="header_btn_mobile">
+            <span class="hamburguer"></span>
+          </button>
+  
+          <ul class="header_menu">
           <li>
             <a href="../Home">
               Home
