--- a/HTML e CSS/Curse/hotel job/src/pages/Reservation/ReservationRoom/index.html
+++ b/HTML e CSS/Curse/hotel job/src/pages/Reservation/ReservationRoom/index.html
@@ -10,26 +10,31 @@
   <link rel="shortcut icon" href="../../../assets/hotel.png" type="image/png">
   <link rel="stylesheet" href="../../../styles/global.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <script src="../../../js/index.js" defer></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <title>LFS Hotel | Reserva</title>
 </head>
 
 <body>
-  <header>
-    <div class="header_container">
-      <div class="header_logo">
-        <a href="../../Home/">
-          <img src="../../../assets/logo.png" alt="Imagem da frente de um hotel">
-
-          <div>
-            <span>LFS</span>
-            <span>HOTEL</span>
-          </div>
-        </a>
-      </div>
-
-      <nav>
-        <ul>
+    <header>
+      <div class="header_container">
+        <div class="header_logo">
+          <a href="../../Home/">
+            <img src="../../../assets/logo.png" alt="Imagem da frente de um hotel">
+  
+            <div>
+              <span>LFS</span>
+              <span>HOTEL</span>
+            </div>
+          </a>
+        </div>
+  
+        <nav id="header-nav" class="header-nav">
+          <button id="btn-mobile" class="header_btn_mobile">
+            <span class="hamburguer"></span>
+          </button>
+  
+          <ul class="header_menu">
           <li>
             <a href="../../Home">
               Home
@@ -61,11 +66,12 @@
   </header>
 
   <main class="flex items-center bg-gradient-to-r from-cyan-300 to-blue-300	">
-    <div class="mx-auto px-4 h-5/6 max-w-4xl flex items-center ">
-      <div class="bg-gray-900	text-slate-100 w-full p-4 rounded">
+    <div class="mx-auto px-4 h-5/6 max-w-full md:max-w-4xl flex items-center ">
+      <div class="bg-gray-900	text-slate-100 w-full p-8 rounded my-5 md:my-0 ">
         <h1 class="text-2xl antialiased font-bold">Faça sua reserva</h1>
         <form class="flex flex-col gap-3">
-          <fieldset class="flex justify-between mt-2">
+
+          <fieldset class="flex justify-between flex-col md:flex-row mt-2">
             <legend>Selecione o quarto desejado:</legend>
 
             <div>
@@ -91,9 +97,10 @@
 
           <div class="flex flex-col">
             <label for="dateTravel">Período de hospedagem</label>
-            <div class="mt-1 flex justify-between items-end	">
+            <div class="mt-1 flex justify-between flex-col md:flex-row md:items-end">
               <input type="date" id="dateTravel" class="rounded p-0.5 text-black" required> 
-              <span class="text-2xl">-</span> 
+              <span class="text-2xl hidden md:inline">-</span>
+              <span class="my-2 md:my-0 self-center md:hidden">à</span>
               <input type="date" id="dateTravel" class="rounded p-0.5 text-black" required>
             </div>
           </div>
@@ -103,29 +110,29 @@
             <input type="text" id="name" maxlength="100" class="rounded p-0.5 text-black" required>
           </div>
 
-          <div class="flex gap-2">
+          <div class="flex gap-2 flex-col md:flex-row">
             <div class="flex flex-col w-full">
               <label for="adress">Endereço</label>
               <input type="text" id="adress" maxlength="100" class="rounded p-0.5 text-black" required>
             </div>
             <div class="flex flex-col">
               <label for="numberHouse">Nº</label>
-              <input type="number" id="numberHouse" maxlength="5" class="rounded w-16 p-0.5 text-black" required>
+              <input type="number" id="numberHouse" maxlength="5" class="rounded md:w-16 p-0.5 text-black" required>
             </div>
           </div>
 
-          <div class="flex gap-2">
+          <div class="flex gap-2 flex-col md:flex-row">
             <div class="flex flex-col w-full">
               <label for="city">Cidade</label>
               <input type="text" id="city" maxlength="100" class="rounded p-0.5 text-black" required>
             </div>
             <div class="flex flex-col">
               <label for="state">Estado</label>
-              <input type="text" id="state" maxlength="2" class="rounded w-16 p-0.5 text-black" required>
+              <input type="text" id="state" maxlength="2" class="rounded md:w-16 p-0.5 text-black" required>
             </div>
             <div class="flex flex-col">
               <label for="nationality">Nacionalidade</label>
-              <input type="text" id="nationality" maxlength="15" class="rounded w-28 p-0.5 text-black" required>
+              <input type="text" id="nationality" maxlength="15" class="rounded md:w-28 p-0.5 text-black" required>
             </div>
           </div>
 
@@ -139,7 +146,7 @@
             <input type="tel" id="phone" maxlength="20" class="rounded p-0.5 text-black" required>
           </div>
 
-          <button class="w-full rounded mt-2 py-2 uppercase antialiased font-bold	text-lg	bg-cyan-500 hover:brightness-90	duration-700	">
+          <button class="w-full rounded mt-2 py-2 uppercase antialiased font-bold	text-lg	bg-cyan-600 hover:brightness-90	duration-700	">
             <a href="#" class="text-white">Confirmar</a>
           </button>
 
