--- a/HTML e CSS/Curse/hotel job/src/pages/Reservation/index.html
+++ b/HTML e CSS/Curse/hotel job/src/pages/Reservation/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="../../styles/global.css">
   <link rel="stylesheet" href="./styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <script src="../../js/index.js" defer></script>
   <title>LFS Hotel | Reserva</title>
 </head>
 
@@ -18,7 +19,7 @@
   <header>
     <div class="header_container">
       <div class="header_logo">
-        <a href="../Home">
+        <a href="../Home/">
           <img src="../../assets/logo.png" alt="Imagem da frente de um hotel">
 
           <div>
@@ -28,8 +29,12 @@
         </a>
       </div>
 
-      <nav>
-        <ul>
+      <nav id="header-nav" class="header-nav">
+        <button id="btn-mobile" class="header_btn_mobile">
+          <span class="hamburguer"></span>
+        </button>
+
+        <ul class="header_menu">
           <li>
             <a href="../Home">
               Home
