--- a/HTML e CSS/Curse/hotel job/src/pages/Reservation/ReservationRoom/index.html
+++ b/HTML e CSS/Curse/hotel job/src/pages/Reservation/ReservationRoom/index.html
@@ -19,7 +19,7 @@
     <header>
       <div class="header_container">
         <div class="header_logo">
-          <a href="../../Home/">
+          <a href="../../Home/index.html">
             <img src="../../../assets/logo.png" alt="Imagem da frente de um hotel">
   
             <div>
@@ -36,27 +36,27 @@
   
           <ul class="header_menu">
           <li>
-            <a href="../../Home">
+            <a href="../../Home/index.html">
               Home
             </a>
           </li>
           <li>
-            <a href="../../Reservation/">
+            <a href="../../Reservation/index.html">
               Reserva
             </a>
           </li>
           <li>
-            <a href="../../Registration/">
+            <a href="../../Registration/index.html">
               Cadastro
             </a>
           </li>
           <li>
-            <a href="../../Payment/">
+            <a href="../../Payment/index.html">
               Pagamento
             </a>
           </li>
           <li>
-            <a href="../../SignUp/">
+            <a href="../../SignUp/index.html">
               <button id="buttonSignUp">Login</button>
             </a>
           </li>
