Creating the files developed in class two

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -29,7 +29,7 @@
       </div>
       <div class="card_container">
         <span class="card_banner">
-          <a href="#">02</a>
+          <a href="./curse 02/index.html">02</a>
           </span>
       </div>
       <div class="card_container">
