Add folder Curse 03 and files

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -34,7 +34,7 @@
       </div>
       <div class="card_container">
         <span class="card_banner">
-          <a href="#">03</a>
+          <a href="./curse 03/index.html">03</a>
           </span>
       </div>
     </section>
