Completion of the fourth class exercises

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -37,6 +37,11 @@
           <a href="./curse 03/index.html">03</a>
           </span>
       </div>
+      <div class="card_container">
+        <span class="card_banner">
+          <a href="./curse 04/index.html">04</a>
+          </span>
+      </div>
     </section>
   </main>
 </body>
