Add files class 05

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -42,6 +42,11 @@
           <a href="./curse 04/index.html">04</a>
           </span>
       </div>
+      <div class="card_container">
+        <span class="card_banner">
+          <a href="./curse 05/index.html">05</a>
+          </span>
+      </div>
     </section>
   </main>
 </body>
