Finalization of class 5 project

--- a/javascript/curse 05/index.html
+++ b/javascript/curse 05/index.html
@@ -15,13 +15,11 @@
     <a href="../index.html">
       <button class="button_back_home">Voltar</button>
     </a>
-    <div class="main_container">
-      <!-- <div class="gameCard_container"> 
-
-      </div> -->
-      <img src="images/background.png" class="gameCard" id="gameCard" alt="">
-      
+    <div class="scoreboard">
+        <h2>Pontuação <span id="scorePlayer">0</span></h2>
+        <button onclick="resetCardsGame()">Resetar</button>
     </div>
+    <div class="main_container" id="cardsGameContainer"></div>
   </main>
 </body>
 </html>
