--- a/javascript/index.html
+++ b/javascript/index.html
@@ -47,6 +47,11 @@
           <a href="./curse 05/index.html">05</a>
           </span>
       </div>
+      <div class="card_container">
+        <span class="card_banner">
+          <a href="./curse 07/index.html">07</a>
+          </span>
+      </div>
     </section>
   </main>
 </body>
