--- a/javascript/index.html
+++ b/javascript/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
@@ -24,32 +24,32 @@
     <section class="main_content">
       <div class="card_container">
         <span class="card_banner">
-          <a href="./curse 01/index.html">01</a>
+          <a href="./class 01/index.html">01</a>
           </span>
       </div>
       <div class="card_container">
         <span class="card_banner">
-          <a href="./curse 02/index.html">02</a>
+          <a href="./class 02/index.html">02</a>
           </span>
       </div>
       <div class="card_container">
         <span class="card_banner">
-          <a href="./curse 03/index.html">03</a>
+          <a href="./class 03/index.html">03</a>
           </span>
       </div>
       <div class="card_container">
         <span class="card_banner">
-          <a href="./curse 04/index.html">04</a>
+          <a href="./class 04/index.html">04</a>
           </span>
       </div>
       <div class="card_container">
         <span class="card_banner">
-          <a href="./curse 05/index.html">05</a>
+          <a href="./class 05/index.html">05</a>
           </span>
       </div>
       <div class="card_container">
         <span class="card_banner">
-          <a href="./curse 07/index.html">07</a>
+          <a href="./class 07/index.html">07</a>
           </span>
       </div>
     </section>
