Creation of class 08 and execution of exercise one and two

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -52,6 +52,11 @@
           <a href="./class 07/index.html">07</a>
           </span>
       </div>
+      <div class="card_container">
+        <span class="card_banner">
+          <a href="./class 08/index.html">08</a>
+          </span>
+      </div>
     </section>
   </main>
 </body>
