Organization of folders, creation of exercises from class 11 and addition of new resources

--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -11,7 +11,9 @@
   <title>Módulo Javascript | Home</title>
   <link rel="stylesheet" href="global.css">
   <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Montserrat:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Montserrat:wght@400;700&family=Roboto:wght@400;700&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
@@ -19,43 +21,54 @@
     <div class="title_container">
       <img src="./assets/javascript.png" alt="Logo do javascript" class="logo_javascript">
       <h1 class="title">Módulo Javascript</h1>
-      <p class="title_repository">Repositório: <a href="https://github.com/luisfcodes/pucpr-paft" target="_blank">github.com/luisfcodes/pucpr-paft</a></p>
+      <p class="title_repository">Repositório: <a href="https://github.com/luisfcodes/pucpr-paft"
+          target="_blank">github.com/luisfcodes/pucpr-paft</a></p>
     </div>
     <section class="main_content">
       <div class="card_container">
         <span class="card_banner">
           <a href="./class 01/index.html">01</a>
-          </span>
+        </span>
       </div>
       <div class="card_container">
         <span class="card_banner">
           <a href="./class 02/index.html">02</a>
-          </span>
+        </span>
       </div>
       <div class="card_container">
         <span class="card_banner">
           <a href="./class 03/index.html">03</a>
-          </span>
+        </span>
       </div>
       <div class="card_container">
         <span class="card_banner">
           <a href="./class 04/index.html">04</a>
-          </span>
+        </span>
+      </div>
+      <div class="card_container">
+        <span class="card_banner card_banner_two_elements">
+          <a href="./class 05 and 06/index.html">05 06</a>
+        </span>
+      </div>
+      <div class="card_container">
+        <span class="card_banner card_banner_two_elements">
+          <a href="./class 07 and 08/index.html">07 08</a>
+        </span>
       </div>
       <div class="card_container">
         <span class="card_banner">
-          <a href="./class 05/index.html">05</a>
-          </span>
+          <a href="./class 09/index.html">09</a>
+        </span>
       </div>
       <div class="card_container">
         <span class="card_banner">
-          <a href="./class 07/index.html">07</a>
-          </span>
+          <a href="./class 10/index.html">10</a>
+        </span>
       </div>
       <div class="card_container">
         <span class="card_banner">
-          <a href="./class 08/index.html">08</a>
-          </span>
+          <a href="./class 11/index.html">11</a>
+        </span>
       </div>
     </section>
   </main>
