--- a/Javascript/class 05 and 06/index.html
+++ b/Javascript/class 05 and 06/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="../global.css">
   <link rel="stylesheet" href="styles.css">
   <script src="./index.js" defer></script>
-  <title>Aula 05 - Javascript</title>
+  <title>Aula 05 e 06 - Javascript</title>
 </head>
 <body>
   <main>
