--- a/Javascript/class 07 and 08/index.html
+++ b/Javascript/class 07 and 08/index.html
@@ -4,17 +4,21 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="../assets/javascript_favicon.png" type="image/png">
   <link rel="stylesheet" href="../global.css">
-  <script src="./index.js"></script>
-  <title>Aula 07 - Javascript</title>
+  <link rel="stylesheet" href="./styles.css">
+  <title>Aula 07 e 08 - Javascript</title>
 </head>
 <body>
   <main>
     <a href="../index.html">
       <button class="button_back_home">Voltar</button>
     </a>
-    <div class="main_container">
-      <h1>Resultados no Console</h1>
+    <div class="main_container quiz">
+      <h1>Projeto Quiz em grupo</h1>
+      <a href="https://github.com/RosiCoimbra/ProjetoQuizzPuc" target="_blank">
+        <button>Repositório</button>
+      </a>
     </div>
   </main>
 </body>
