--- a/Javascript/class 09/index.html
+++ b/Javascript/class 09/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="../assets/javascript_favicon.png" type="image/png">
   <link rel="stylesheet" href="../global.css">
   <script src="./index.js"></script>
-  <title>Aula 08 - Javascript</title>
+  <title>Aula 09 - Javascript</title>
 </head>
 <body>
   <main>
