--- a/HTML and CSS/index.html
+++ b/HTML and CSS/index.html
@@ -99,6 +99,17 @@
           </div>
         </a>
       </div>
+
+      <div class="card_container">
+        <a href="./hotel job/src/pages/Home/index.html">
+          <img class="card_banner" src="./hotel job/src/assets/banner.jpg" alt="Foto com conceito de animação de um pincel e alguns livros">
+          <div class="card_content">
+            <h3>Projeto Hotel</h3>
+            <span>Objetivo:</span>
+            <p>Praticar conhecimentos.</p>
+          </div>
+        </a>
+      </div>
     </section>
   </main>
 </body>
